--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel = "stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <div class="container1">
-        <button class="backAndNextBtn" value="back" onclick="backOrNextBtn(value)"> < </button>
+    <div class="containerHead">
+        <button class="previousAndNextBtn" value="previous" onclick="previousOrNextBtn(value)"> < </button>
         <img src="pictures/3.jpg" class="bigPicture" id="bigPicture" alt="Picture">
-        <button class="backAndNextBtn" value="next" onclick="backOrNextBtn(value)"> > </button>
+        <button class="previousAndNextBtn" value="next" onclick="previousOrNextBtn(value)"> > </button>
     </div>
-    <div class="container2">
+    <div class="containerBody">
         <img class="pictureMini" id="firstPicture" src="pictures/1.jpg" alt="Picture">
         <img class="pictureMini" id="secondPicture" src="pictures/2.jpg" alt="Picture">
         <img class="pictureMiddle" id="thirdPicture" src= "pictures/3.jpg" alt="Picture">
